--- a/src/styles/sass/components/shared/_header.scss
+++ b/src/styles/sass/components/shared/_header.scss
@@ -9,7 +9,7 @@
 
   @media (max-width: $breakpoint-mobile) {
     padding: 2rem 0;
-    width: 100vw;
+    width: 100%;
     padding: 4rem 11.5vw;
   }
 
