--- a/src/styles/sass/components/shared/_leaf.scss
+++ b/src/styles/sass/components/shared/_leaf.scss
@@ -1,5 +1,5 @@
 .detail {
-  width: 100vw;
+  width: 100%;
   height: 0;
   position: absolute;
   z-index: -1;
